# 3D-Renderer-App

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: dev-mode.cmake  docs-ci.cmake  docs.cmake  external_libs.cmake  install-rules.cmake  variables.cmake
docs/: Doxyfile.in
source/: CMakeLists.txt  app.cpp  app.hpp  app_gui.cpp  app_gui.hpp  app_kernel.cpp  app_kernel.hpp  except.cpp  except.hpp  main.cpp
source/app/: CMakeLists.txt  lib.cpp
source/controllers/: CMakeLists.txt  engine_controller.cpp  engine_controller.hpp
source/interface/: CMakeLists.txt  camera_info.cpp  camera_info.hpp  cameras_list.cpp  cameras_list.hpp  image_region.cpp  image_region.hpp  main_window.cpp  main_window.hpp  main_window.ui  object_info.cpp  object_info.hpp  objects_list.cpp  objects_list.hpp  view.cpp  view.hpp
source/models/: 3D_engine.cpp  3D_engine.hpp  3D_scene.cpp  3D_scene.hpp  CMakeLists.txt  camera_monitor.cpp  camera_monitor.hpp  object_monitor.cpp  object_monitor.hpp
source/utils/: ports.hpp
